feat(新增组件，调整布局样式): 组件样式

--- a/examples/i18n/page.json
+++ b/examples/i18n/page.json
@@ -2,6 +2,29 @@
   {
     "lang": "zh-CN",
     "pages": {
+      "index": {
+        "1": "网站快速成型工具",
+        "2": "Element，一套为开发者、设计师和产品经理准备的基于 Vue 2.0 的桌面端组件库",
+        "3": "指南",
+        "4": "了解设计指南，帮助产品设计人员搭建逻辑清晰、结构合理且高效易用的产品。",
+        "5": "查看详情",
+        "6": "组件",
+        "7": "使用组件 Demo 快速体验交互细节；使用前端框架封装的代码帮助工程师快速开发。",
+        "8": "资源",
+        "9": "下载相关资源，用其快速搭建页面原型或高保真视觉稿，提升产品设计效率。",
+        "10": "主题",
+        "11": "在线主题编辑器，可视化定制和管理站点主题、组件样式",
+        "12": "主题定制功能上线",
+        "13": "点击开始编辑",
+        "14": "尝试您的新主题",
+        "lang": "zh-CN",
+        "titleSize": "34",
+        "paraSize": "18"
+      },
+      "guide": {
+        "1": "设计原则",
+        "2": "导航"
+      },
       "component": {}
     }
   }
