--- a/examples/i18n/component.json
+++ b/examples/i18n/component.json
@@ -22,9 +22,7 @@
     },
     "header": {
       "guide": "指南",
-      "components": "组件",
-      "theme": "主题",
-      "resource": "资源"
+      "components": "组件"
     },
     "nav": {
       "dropdown": "版本："
